--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: aso-tool
     env: python
     buildCommand: chmod +x build.sh && ./build.sh
-    startCommand: gunicorn app.main:app -k uvicorn.workers.UvicornWorker -b 0.0.0.0:$PORT
+    startCommand: cd app && python -m uvicorn main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PORT
         value: 8000
@@ -11,4 +11,6 @@ services:
         value: 3.11.0
       - key: NODE_VERSION
         value: 20.0.0
+      - key: PYTHONPATH
+        value: /app/app
     healthCheckPath: /health
