--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,8 @@
+fastapi==0.109.0
+uvicorn==0.27.0
 google-play-scraper==1.2.4
-fastapi==0.104.1
-uvicorn==0.24.0
-pydantic==2.5.2
-pydantic-settings==2.1.0
-matplotlib==3.8.2
-seaborn==0.13.0
-pandas==2.1.3
-numpy==1.26.2
-textblob==0.17.1
 nltk==3.8.1
-pytest==8.0.0
-pytest-asyncio==0.23.5
-httpx==0.26.0
-aiofiles==23.2.1
 python-multipart==0.0.6
-jinja2==3.1.2
-itsdangerous==2.1.2
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
+aiohttp==3.9.3
+psutil==5.9.8
 gunicorn==21.2.0
-python-dotenv==1.0.0
-requests==2.31.0
-beautifulsoup4==4.12.2
-pandas==2.1.3
-nltk==3.8.1
-scikit-learn==1.3.2
