--- a/render.yaml
+++ b/render.yaml
@@ -2,15 +2,13 @@ services:
   - type: web
     name: aso-tool
     env: python
-    buildCommand: chmod +x build.sh && ./build.sh
+    buildCommand: pip install -r requirements.txt && python -c "import nltk; nltk.download('punkt'); nltk.download('vader_lexicon')"
     startCommand: cd app && python -m uvicorn main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PORT
         value: 8000
       - key: PYTHON_VERSION
         value: 3.11.0
-      - key: NODE_VERSION
-        value: 20.0.0
       - key: PYTHONPATH
         value: /app/app
     healthCheckPath: /health
