--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: aso-tool
     env: python
-    buildCommand: pip install -r requirements.txt && python -c "import nltk; nltk.download('punkt'); nltk.download('vader_lexicon')"
+    buildCommand: pip install -e .
     startCommand: cd app && python -m uvicorn main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PORT
@@ -10,5 +10,5 @@ services:
       - key: PYTHON_VERSION
         value: 3.11.0
       - key: PYTHONPATH
-        value: /app/app
+        value: /app
     healthCheckPath: /health
