--- a/render.yaml
+++ b/render.yaml
@@ -1,14 +1,9 @@
 services:
   - type: web
     name: aso-tool
-    env: python
-    buildCommand: pip install -e .
-    startCommand: cd app && python -m uvicorn main:app --host 0.0.0.0 --port $PORT
+    env: docker
+    dockerfilePath: ./Dockerfile
     envVars:
       - key: PORT
         value: 8000
-      - key: PYTHON_VERSION
-        value: 3.11.0
-      - key: PYTHONPATH
-        value: /app
     healthCheckPath: /health
