--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,13 @@
 services:
   - type: web
     name: aso-tool
-    env: docker
-    dockerfilePath: ./Dockerfile
+    env: python
+    buildCommand: |
+      pip install -r requirements.txt
+      python -c "import nltk; nltk.download('punkt'); nltk.download('vader_lexicon')"
+    startCommand: cd app && PYTHONPATH=/app python -m uvicorn app.main:app --host 0.0.0.0 --port $PORT
     envVars:
-      - key: PORT
-        value: 8000
+      - key: PYTHONPATH
+        value: /app
     healthCheckPath: /health
+    autoDeploy: true
