--- a/render.yaml
+++ b/render.yaml
@@ -2,12 +2,13 @@ services:
   - type: web
     name: aso-tool
     env: python
-    buildCommand: |
-      pip install -r requirements.txt
-      python -c "import nltk; nltk.download('punkt'); nltk.download('vader_lexicon')"
+    runtime: python3.11
+    buildCommand: pip install -r requirements.txt && python -c "import nltk; nltk.download('punkt'); nltk.download('vader_lexicon')"
     startCommand: cd app && PYTHONPATH=/app python -m uvicorn app.main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHONPATH
         value: /app
+      - key: NLTK_DATA
+        value: /opt/render/nltk_data
     healthCheckPath: /health
     autoDeploy: true
