--- a/render.yaml
+++ b/render.yaml
@@ -3,12 +3,17 @@ services:
     name: aso-tool
     env: python
     runtime: python3.11
-    buildCommand: pip install -r requirements.txt && python -c "import nltk; nltk.download('punkt'); nltk.download('vader_lexicon')"
+    buildCommand: |
+      pip install -r requirements.txt
+      python -c "import nltk; nltk.download('punkt'); nltk.download('vader_lexicon')"
+      mkdir -p app/static
     startCommand: cd app && PYTHONPATH=/app python -m uvicorn app.main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHONPATH
         value: /app
       - key: NLTK_DATA
         value: /opt/render/nltk_data
+      - key: STATIC_DIR
+        value: /app/app/static
     healthCheckPath: /health
     autoDeploy: true
