--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.109.0
 uvicorn==0.27.0
 google-play-scraper==1.2.4
-nltk==3.8.1
+nltk>=3.9
 python-multipart==0.0.6
 aiohttp==3.9.3
 psutil==5.9.8
