--- a/render.yaml
+++ b/render.yaml
@@ -7,7 +7,7 @@ services:
       pip install -r requirements.txt
       python -c "import nltk; nltk.download('punkt'); nltk.download('vader_lexicon')"
       mkdir -p app/static
-    startCommand: cd app && PYTHONPATH=/app python -m uvicorn app.main:app --host 0.0.0.0 --port $PORT
+    startCommand: PYTHONPATH=/app python -m uvicorn app.main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHONPATH
         value: /app
