--- a/render.yaml
+++ b/render.yaml
@@ -3,12 +3,16 @@ services:
     name: aso-tool
     env: python
     runtime: python3.11
-    buildCommand: pip install -r requirements.txt && python -c "import nltk; nltk.download('punkt'); nltk.download('vader_lexicon')"
-    startCommand: cd src && python -m uvicorn app.main:app --host 0.0.0.0 --port $PORT
+    buildCommand: |
+      pip install -e .
+      python -c "import nltk; nltk.download('punkt'); nltk.download('vader_lexicon')"
+    startCommand: python -m uvicorn aso_tool.main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHONPATH
-        value: /opt/render/project/src/src
+        value: /opt/render/project/src
       - key: NLTK_DATA
-        value: /opt/render/project/src/data
+        value: /opt/render/project/src/nltk_data
+      - key: PYTHON_ENV
+        value: production
     healthCheckPath: /health
     autoDeploy: true
