--- a/render.yaml
+++ b/render.yaml
@@ -4,15 +4,31 @@ services:
     env: python
     runtime: python3.11
     buildCommand: |
-      pip install -e .
+      # Install dependencies
+      pip install -r requirements.txt
+      
+      # Install NLTK data
       python -c "import nltk; nltk.download('punkt'); nltk.download('vader_lexicon')"
-    startCommand: python -m uvicorn aso_tool.main:app --host 0.0.0.0 --port $PORT
+      
+      # Create necessary directories
+      mkdir -p /opt/render/project/src/static
+      mkdir -p /opt/render/project/src/data
+      
+      # Copy files to the correct location
+      cp -r aso_tool /opt/render/project/src/
+      
+    startCommand: |
+      cd /opt/render/project/src && \
+      PYTHONPATH=/opt/render/project/src \
+      python -m uvicorn aso_tool.main:app --host 0.0.0.0 --port $PORT
+      
     envVars:
       - key: PYTHONPATH
         value: /opt/render/project/src
       - key: NLTK_DATA
-        value: /opt/render/project/src/nltk_data
-      - key: PYTHON_ENV
-        value: production
+        value: /opt/render/project/src/data
+      - key: STATIC_DIR
+        value: /opt/render/project/src/static
+      
     healthCheckPath: /health
     autoDeploy: true
