--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,18 @@ services:
   - type: web
     name: aso-tool
     env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: cd app && python -m uvicorn main:app --host 0.0.0.0 --port $PORT
+    buildCommand: |
+      # Install dependencies
+      pip install -r requirements.txt
+      
+      # Create NLTK data directory
+      mkdir -p /opt/render/project/src/nltk_data
+      
+      # Download NLTK data
+      NLTK_DATA=/opt/render/project/src/nltk_data python3 -c "import nltk; nltk.download('punkt'); nltk.download('vader_lexicon')"
+      
+    startCommand: cd app && NLTK_DATA=/opt/render/project/src/nltk_data python -m uvicorn main:app --host 0.0.0.0 --port $PORT
+    envVars:
+      - key: NLTK_DATA
+        value: /opt/render/project/src/nltk_data
     healthCheckPath: /health
