--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,13 @@
 fastapi==0.109.0
 uvicorn==0.27.0
+nltk>=3.9
+google-play-scraper==1.2.4
+python-multipart==0.0.6
+aiohttp==3.9.3
+psutil==5.9.8
+gunicorn==21.2.0
+matplotlib==3.8.3
+pandas==2.2.1
+seaborn==0.13.2
+textblob==0.19.0
+pydantic-settings==2.8.1
