Added secure DeepSeek integration with encrypted API key
- Added key_manager.py for secure API key handling
- Created DeepseekAnalyzer class with comprehensive ASO analysis features
- Added integration tests
- Updated environment configuration
- Implemented secure key storage with encryption

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -29,6 +29,7 @@ python-multipart = "^0.0.9"
 aiohttp = "^3.9.3"
 beautifulsoup4 = "^4.12.3"
 pytest-asyncio = "^0.25.3"
+openai = "1.61.1"
 
 [build-system]
 requires = ["poetry-core"]
