--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@nivo/bar": "^0.88.0",
     "@nivo/scatterplot": "^0.88.0",
     "@tanstack/react-query": "^5.66.9",
